2005-07-28  John Sullivan  <sullivan@apple.com>

        Reviewed by Beth Dakin.
        
        - removed method -[WebHTMLRepresentation elementForView:], which was SPI used only for
        Safari autofill. Tip of tree Safari no longer includes any calls to this method. Also, 
        Tiger Safari never gets around to actually calling it due to the other recent form-SPI-related
        changes, so removing this method doesn't break Tiger Safari running on tip of tree WebKit
        (though autofill continues to not work in that configuration).

        * WebView.subproj/WebHTMLRepresentation.h:
        * WebView.subproj/WebHTMLRepresentation.m:
        (-[WebHTMLRepresentation elementForView:]): removed
        
2005-07-27  John Sullivan  <sullivan@apple.com>

	Patch by Trey Matteson <trey@usa.net>
        Reviewed by me.

        Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=4169
          scaling PDF view up leaves later HTML view scaled too

        An additional step of separating scaling of HTML and PDF.  If we do a zoom and there
        are no docViews that track the common scaling factor, then don't change it.  Thus in
        the common PDF case where it is the only doc view, scaling the PDF does not affect
        HTML pages loaded in the same window.

        * WebView.subproj/WebView.m:
        (-[WebView canMakeTextSmaller]):  Pass 0 for new scaling factor, since we just querying.
        (-[WebView canMakeTextLarger]):  Ditto.
        (-[WebView makeTextSmaller:]):  Pass new scaling factor.
        (-[WebView makeTextLarger:]):  Ditto.
        (-[WebView canMakeTextStandardSize]):  Pass 0 for new scaling factor.
        (-[WebView makeTextStandardSize:]):  Pass new scaling factor.
        (-[WebView _performTextSizingSelector:withObject:onTrackingDocs:selForNonTrackingDocs:newScaleFactor:]):
          The meat of the change is that this Swiss Army Knife also takes a new scaling